# gepetto-discord-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Readme.md  TECHNICAL_OVERVIEW.md  ai.py  backup_restore.py  config.py  constants.py  helpers.py  main.py  pyproject.toml  random_facts.json  requirements.txt  run.sh  run_gepetto.sh  run_minxie.sh  utils.py
.cursor/rules/: stack.mdc
gepetto/: base_model.py  birthdays.py  bot_state.py  botfactory.py  calculator.py  claude.py  dalle.py  gemini.py  gpt.py  groq.py  guard.py  history.py  images.py  memory.py  metoffer.py  mistral.py  model_factory.py  ollama.py  openrouter.py  perplexity.py  random_facts.py  replicate.py  response.py  sentry.py  sora.py  summary.py  tools.py  video_prompt.md  weather.py  websearch.py
gepetto/handlers/: message_handler.py
gepetto/helpers/: discord_utils.py  history.py
mistral/: TODO.md  chat.py
scripts/: README.md  add_occasion.py  try_chat_image.py  try_news_filter.py
src/: __init__.py
tests/: conftest.py  test_activity_store.py  test_backup_restore.py  test_calculator.py  test_catch_up.py  test_discogs.py  test_embeddings.py  test_fal.py  test_grok.py  test_helpers.py  test_history_context.py  test_image_prompt_corpse.py  test_image_store.py  test_matrix_adapter.py  test_memory_extraction.py  test_memory_store.py  test_news.py  test_news_store.py  test_openai_direct.py  test_persistence.py  test_platforms.py  test_reminder_store.py  test_replicate.py  test_summary.py  test_tool_dispatcher.py  test_url_store.py  test_vlm.py  test_vlm_openai.py
(+53 files in other folders)
