[project]
name = "gepetto-discord-bot"
version = "1.0.0"
description = "Discord bot using LLMs to generate responses, images, and more"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.3.0",
    "openai>=1.68.2",
    "beautifulsoup4>=4.12.2",
    "youtube_transcript_api>=1.2.2",
    "pypdf2>=3.0.1",
    "feedparser>=6.0.10",
    "trafilatura>=1.8.1",
    "groq",
    "anthropic",
    "replicate>=0.32.1",
    "litellm>=1.66.3",
    "mathparse",
    "xai-sdk>=1.6.1",
    "matrix-nio>=0.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
